--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.3.1 - February 26 2021
+========================
+    - change to make the request attribute lazy
+
 0.3.0 - April 16 2015
 =====================
     - related_fields and get_object_or_404 fix from François Chapuis
